tests/ui/de-tuple-struct.stderr
error: Tuple structs aren't supported by the Deserr derive macro
 --> tests/ui/de-tuple-struct.rs:5:19
  |
5 | struct TupleStruct(i32, i32);
  |                   ^^^^^^^^^^
